--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Redes Sociais</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link para o CSS -->
 </head>
 <body>
-    <h1></h1>
+    <h1>Pesquisa sobre redes sociais</h1>
     <form id="surveyForm">
-        <label for="name"></label><br>
+        <label for="name">Ana Beatriz Dias</label><br>
         <input type="text" id="name" required><br><br>
 
-        <label></label><br>
+        <label>Instagram</label><br>
         <select id="socialMedia" required>
-            <option value=""></option>
+            <option value="">selecione...</option>
             <option value="Facebook">Facebook</option>
             <option value="Instagram">Instagram</option>
             <option value="Twitter">Twitter</option>
@@ -23,13 +23,13 @@
             <option value="Outra">Outra</option>
         </select><br><br>
 
-        <label></label><br>
+        <label>mais ou menos quatro horas</label><br>
         <input type="number" id="hours" min="0" required><br><br>
 
-        <label></label><br>
+        <label>Os diversos conteúdos que posso aprender sem sair de casa.</label><br>
         <textarea id="feedback" rows="4" required></textarea><br><br>
 
-        <button type="submit"></button>
+        <button type="submit">Enviar</button>
     </form>
 
     <div id="result" class="feedback" style="display:none;"></div>
