--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pesquisa sobre redes sociais</h1>
     <form id="surveyForm">
-        <label for="name">Ana Beatriz Dias</label><br>
+        <label for="name">Nome</label><br>
         <input type="text" id="name" required><br><br>
 
         <label>Instagram</label><br>
@@ -23,10 +23,10 @@
             <option value="Outra">Outra</option>
         </select><br><br>
 
-        <label>mais ou menos quatro horas</label><br>
+        <label>Quantas horas você costuma passar nas redes sociais</label><br>
         <input type="number" id="hours" min="0" required><br><br>
 
-        <label>Os diversos conteúdos que posso aprender sem sair de casa.</label><br>
+        <label>O que você costuma fazer nas redes sociais</label><br>
         <textarea id="feedback" rows="4" required></textarea><br><br>
 
         <button type="submit">Enviar</button>
